--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>BTS TIMELINE</title>
-    <link rel="stylesheet" href="style copy 5.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1 class="header">HEADER</h1>
@@ -270,4 +270,5 @@
     </div>
     </div>
 </body>
+
 </html>
